--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #121212;
@@ -89,5 +88,12 @@ footer {
     background: #1db954;
     text-align: center;
     margin-top: auto;
+}
+.logo {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
