--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,10 @@
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #121212;
     color: white;
     margin: 0;
-    padding: 0;
+    padding: 0;t
 }
 header {
     background: #1db954;
