--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #121212;
     color: white;
     margin: 0;
-    padding: 0;t
+    padding: 0;
 }
 header {
     background: #1db954;
