--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #121212;
+    background-color: Green;
     color: white;
     margin: 0;
     padding: 0;
