--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: serif;
+    font-family: 'Neuton', serif;
     background-color: #209d50;
     color: black;
     margin: 0;
